# QTCode

./: CMakeLists.txt  Jenkinsfile  Makefile  calculator  calculator-qml.h  calculator.cpp  calculator.h  calculator.pro  calculator_logic.cpp  calculator_test.cpp  cppcheck-report.xml  qmake_qml_resources.qrc  qmldir  qrc_qmake_qml_resources.cpp  statemachine.cpp  statemachine.h
build1/: CMakeCache.txt  CTestTestfile.cmake  Makefile  calculator_test  calculatorscxml  cmake_install.cmake  moc_calculator.cpp_parameters  moc_calculator_test.cpp  moc_calculator_test.cpp_parameters
build1/Testing/Temporary/: CTestCostData.txt
build1/calculator_test_autogen/: moc_predefs.h
build1/calculator_test_autogen/include/: calculator_test.moc.d
build1/calculatorscxml_autogen/: mocs_compilation.cpp
build1/calculatorscxml_autogen/EWIEGA46WW/: moc_calculator-qml.cpp.d
qml/: MainWindow.qml
